--- a/index.html
+++ b/index.html
@@ -13,46 +13,41 @@
 				<button class="modal__header--close-btn">X</button>
 				<div class="modal__header--title">דירוג העסק</div>
 			</div>
-			<div class="modal__body">
+			<div class="modal__body--first-paragraph">
 				<div class="modal__body--rating">
 					<h1 class="rating__satisfaction">?עד כמה היית מרוצה מהעסק</h1>
 				</div>
-				<div>
-					<img src="images/star-empty-darkBlue.svg" />
-					<img src="images/star-empty-darkBlue.svg" />
-					<img src="images/star-empty-darkBlue.svg" />
-					<img src="images/star-empty-darkBlue.svg" />
-					<img src="images/star-empty-darkBlue.svg" />
-				</div>
-				<div>
-					<img src="images/star-empty-darkBlue.svg" />
-					<img src="images/star-empty-darkBlue.svg" />
-					<img src="images/star-empty-darkBlue.svg" />
-					<img src="images/star-empty-darkBlue.svg" />
-					<img src="images/star-empty-darkBlue.svg" />
-				</div>
-				<div>
-					<img src="images/star-empty-darkBlue.svg" />
-					<img src="images/star-empty-darkBlue.svg" />
-					<img src="images/star-empty-darkBlue.svg" />
-					<img src="images/star-empty-darkBlue.svg" />
-					<img src="images/star-empty-darkBlue.svg" />
-				</div>
-				<div>
-					<img src="images/star-empty-darkBlue.svg" />
-					<img src="images/star-empty-darkBlue.svg" />
-					<img src="images/star-empty-darkBlue.svg" />
-					<img src="images/star-empty-darkBlue.svg" />
-					<img src="images/star-empty-darkBlue.svg" />
-				</div>
-				<div>
-					<img src="images/star-empty-darkBlue.svg" />
-					<img src="images/star-empty-darkBlue.svg" />
-					<img src="images/star-empty-darkBlue.svg" />
-					<img src="images/star-empty-darkBlue.svg" />
-					<img src="images/star-empty-darkBlue.svg" />
+
+				<div class="rating--row">
+					<div class="star-rating">
+						<img src="images/star-empty-darkBlue.svg" alt="Empty Star" class="star" />
+						<img src="images/star-empty-darkBlue.svg" alt="Empty Star" class="star" />
+						<img src="images/star-empty-darkBlue.svg" alt="Empty Star" class="star" />
+						<img src="images/star-empty-darkBlue.svg" alt="Empty Star" class="star" />
+						<img src="images/star-empty-darkBlue.svg" alt="Empty Star" class="star" />
+					</div>
+					<p>שירות מקצועי</p>
 				</div>
 			</div>
+			<hr class="solid" />
+			<div class="modal__body--second-paragraph">
+				<h1>כמה מילים על החוויה שלך עם העסק</h1>
+				<span><h1 class="second__paragraph--type-here">...יש להקליד כאן</h1></span>
+			</div>
+			<hr class="solid" />
+			<div class="modal__body--third-paragraph">
+				<span><h1>הוספת תמונות</h1></span>
+				<img src="images/bc-gallery.svg" alt="image" />
+			</div>
+			<hr class="solid" />
+			<div class="modal__body--four-paragraph">
+				<span
+					>קראתי את <span class="--inner">תנאי השימוש</span> והם מקובלים עלי</span
+				>
+				<input type="checkbox" />
+			</div>
+			<button id="btn" class="share-button">שיתוף תגובה</button>
+			<button id="btn" class="cancel-button">ביטול</button>
 		</div>
 		<div id="overlay"></div>
 	</body>
