--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="sytles.css" />
+		<script src="index.js"></script>
 		<title>Roey Rachmany</title>
 	</head>
 	<body>
@@ -18,15 +19,130 @@
 					<h1 class="rating__satisfaction">?עד כמה היית מרוצה מהעסק</h1>
 				</div>
 
-				<div class="rating--row">
-					<div class="star-rating">
-						<img src="images/star-empty-darkBlue.svg" alt="Empty Star" class="star" />
-						<img src="images/star-empty-darkBlue.svg" alt="Empty Star" class="star" />
-						<img src="images/star-empty-darkBlue.svg" alt="Empty Star" class="star" />
-						<img src="images/star-empty-darkBlue.svg" alt="Empty Star" class="star" />
-						<img src="images/star-empty-darkBlue.svg" alt="Empty Star" class="star" />
+				<div id="one" class="rating--row">
+					<div class="rating--row-stars">
+						<div class="container">
+							<img id="img5" src="images/star-empty-darkBlue.svg" alt="empty star" />
+							<a class="centered">5</a>
+						</div>
+						<div class="container">
+							<img id="img4" src="images/star-empty-darkBlue.svg" alt="empty star" />
+							<a class="centered">4</a>
+						</div>
+						<div class="container">
+							<img id="img3" src="images/star-empty-darkBlue.svg" alt="empty star" />
+							<a class="centered">3</a>
+						</div>
+						<div class="container">
+							<img id="img2" src="images/star-empty-darkBlue.svg" alt="empty star" />
+							<a class="centered">2</a>
+						</div>
+						<div class="container">
+							<img id="img1" src="images/star-empty-darkBlue.svg" alt="empty star" />
+							<a class="centered">1</a>
+						</div>
 					</div>
 					<p>שירות מקצועי</p>
+				</div>
+				<div id="two" class="rating--row">
+					<div class="rating--row-stars">
+						<div class="container">
+							<img id="img5" src="images/star-empty-darkBlue.svg" alt="empty star" />
+							<a class="centered">5</a>
+						</div>
+						<div class="container">
+							<img id="img4" src="images/star-empty-darkBlue.svg" alt="empty star" />
+							<a class="centered">4</a>
+						</div>
+						<div class="container">
+							<img id="img3" src="images/star-empty-darkBlue.svg" alt="empty star" />
+							<a class="centered">3</a>
+						</div>
+						<div class="container">
+							<img id="img2" src="images/star-empty-darkBlue.svg" alt="empty star" />
+							<a class="centered">2</a>
+						</div>
+						<div class="container">
+							<img id="img1" src="images/star-empty-darkBlue.svg" alt="empty star" />
+							<a class="centered">1</a>
+						</div>
+					</div>
+					<p>מחיר ממוצע</p>
+				</div>
+				<div id="three" class="rating--row">
+					<div class="rating--row-stars">
+						<div class="container">
+							<img id="img5" src="images/star-empty-darkBlue.svg" alt="empty star" />
+							<a class="centered">5</a>
+						</div>
+						<div class="container">
+							<img id="img4" src="images/star-empty-darkBlue.svg" alt="empty star" />
+							<a class="centered">4</a>
+						</div>
+						<div class="container">
+							<img id="img3" src="images/star-empty-darkBlue.svg" alt="empty star" />
+							<a class="centered">3</a>
+						</div>
+						<div class="container">
+							<img id="img2" src="images/star-empty-darkBlue.svg" alt="empty star" />
+							<a class="centered">2</a>
+						</div>
+						<div class="container">
+							<img id="img1" src="images/star-empty-darkBlue.svg" alt="empty star" />
+							<a class="centered">1</a>
+						</div>
+					</div>
+					<p>מקצועיות הצוות</p>
+				</div>
+				<div id="four" class="rating--row">
+					<div class="rating--row-stars">
+						<div class="container">
+							<img id="img5" src="images/star-empty-darkBlue.svg" alt="empty star" />
+							<a class="centered">5</a>
+						</div>
+						<div class="container">
+							<img id="img4" src="images/star-empty-darkBlue.svg" alt="empty star" />
+							<a class="centered">4</a>
+						</div>
+						<div class="container">
+							<img id="img3" src="images/star-empty-darkBlue.svg" alt="empty star" />
+							<a class="centered">3</a>
+						</div>
+						<div class="container">
+							<img id="img2" src="images/star-empty-darkBlue.svg" alt="empty star" />
+							<a class="centered">2</a>
+						</div>
+						<div class="container">
+							<img id="img1" src="images/star-empty-darkBlue.svg" alt="empty star" />
+							<a class="centered">1</a>
+						</div>
+					</div>
+					<p>זמינות בעל העסק</p>
+				</div>
+				<div id="five" class="rating--row">
+					<div class="rating--row-stars">
+						<div class="container">
+							<img id="img5" src="images/star-empty-darkBlue.svg" alt="empty star" />
+							<a class="centered">5</a>
+						</div>
+						<div class="container">
+							<img id="img4" src="images/star-empty-darkBlue.svg" alt="empty star" />
+							<a class="centered">4</a>
+						</div>
+						<div class="container">
+							<img id="img3" src="images/star-empty-darkBlue.svg" alt="empty star" />
+							<a class="centered">3</a>
+						</div>
+						<div class="container">
+							<img id="img2" src="images/star-empty-darkBlue.svg" alt="empty star" />
+							<a class="centered">2</a>
+						</div>
+						<div class="container">
+							<img id="img1" src="images/star-empty-darkBlue.svg" alt="empty star" />
+							<a class="centered">1</a>
+						</div>
+					</div>
+					<p>התרשמות כללית</p>
 				</div>
 			</div>
 			<hr class="solid" />
@@ -52,3 +168,19 @@
 		<div id="overlay"></div>
 	</body>
 </html>
+<!-- <div class="rating">
+						<input type="radio" name="rating" id="star5" value="5" />
+						<label class="image-number" for="star5">5</label>
+
+						<input type="radio" name="rating" id="star4" value="4" />
+						<label class="image-number" for="star4">4</label>
+
+						<input type="radio" name="rating" id="star3" value="3" />
+						<label class="image-number" for="star3">3</label>
+
+						<input type="radio" name="rating" id="star2" value="2" />
+						<label class="image-number" for="star2">2</label>
+
+						<input type="radio" name="rating" id="star1" value="1" />
+						<label class="image-number" for="star1">1</label>
+					</div> -->
