--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 			</div>
 			<hr class="solid" />
 			<div class="modal__body--third-paragraph">
-				<span><h1>הוספת תמונות</h1></span>
+				<span><a>הוספת תמונות</a></span>
 				<img src="images/bc-gallery.svg" alt="image" />
 			</div>
 			<hr class="solid" />
@@ -168,19 +168,3 @@
 		<div id="overlay"></div>
 	</body>
 </html>
-<!-- <div class="rating">
-						<input type="radio" name="rating" id="star5" value="5" />
-						<label class="image-number" for="star5">5</label>
-
-						<input type="radio" name="rating" id="star4" value="4" />
-						<label class="image-number" for="star4">4</label>
-
-						<input type="radio" name="rating" id="star3" value="3" />
-						<label class="image-number" for="star3">3</label>
-
-						<input type="radio" name="rating" id="star2" value="2" />
-						<label class="image-number" for="star2">2</label>
-
-						<input type="radio" name="rating" id="star1" value="1" />
-						<label class="image-number" for="star1">1</label>
-					</div> -->
