--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
 			<hr class="solid" />
 			<div class="modal__body--four-paragraph">
 				<span
-					>קראתי את <span class="--inner">תנאי השימוש</span> והם מקובלים עלי</span
+					>קראתי את <span class="four-paragraph--inner">תנאי השימוש</span> והם
+					מקובלים עלי</span
 				>
 				<input type="checkbox" />
 			</div>
